changed wow.js directory

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -8,7 +8,7 @@
   <title>Hey it's Kevin</title>
   <script src="https://kit.fontawesome.com/eacd88b6a6.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/custom-css.css">
-  <link rel="stylesheet" href="wow/css/libs/animate.css">
+  <link rel="stylesheet" href="lib/wow/css/libs/animate.css">
 </head>
 
 <body>
@@ -349,7 +349,7 @@
   </div>
 
   <script src="assets/js/custom-js.js"></script>
-  <script src="wow/dist/wow.js"></script>
+  <script src="lib/wow/dist/wow.js"></script>
   <script>
     wow = new WOW(
       {
