changed responsive design

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -24,6 +24,11 @@
           <line x1=1 x2=20 y1=19 y2=19></line>
         </svg>
       </div>
+      <ul class="main-list">
+        <li><a href="#about"><i class="fa-regular fa-address-card"></i> About</a></li>
+        <li><a href="#project"><i class="fa-solid fa-list-check"></i> Projects</a></li>
+        <li><a href="#contact"><i class="fa-regular fa-address-book"></i> Contact</a></li>
+      </ul>
     </nav>
   </header>
   <main>
@@ -339,7 +344,7 @@
     <div class='hamburger__container'>
       <div class='hamburger__content'>
         <i class="fa-solid fa-x close-hamburger"></i>
-        <ul class="main-list">
+        <ul class="hamburger__list">
           <li><a href="#about"><i class="fa-regular fa-address-card"></i> About</a></li>
           <li><a href="#project"><i class="fa-solid fa-list-check"></i> Projects</a></li>
           <li><a href="#contact"><i class="fa-regular fa-address-book"></i> Contact</a></li>
