changes in js visbility

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -25,16 +25,16 @@
         </svg>
       </div>
       <ul class="main-list">
-        <li><a href="#about"><i class="fa-regular fa-address-card"></i> About</a></li>
-        <li><a href="#project"><i class="fa-solid fa-list-check"></i> Projects</a></li>
-        <li><a href="#contact"><i class="fa-regular fa-address-book"></i> Contact</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#project">Projects</a></li>
+        <li><a href="#contact">Contacts</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <div class='main__content-container'>
       <section class='hero__container'>
-        <div class='hero__start-img'>
+        <div class='hero__start-img wow fadeInUp' data-wow-delay="1s">
           <img class="image-animation" src='https://cdn-icons-png.freepik.com/512/8715/8715911.png'></img>
         </div>
         <div class='hero__info'>
@@ -189,7 +189,7 @@
 
 
     <div class="next__content-container">
-      <section class="about__container">
+      <section class="about__container wow fadeInUp">
         <div class='about__heading'>
           <p>Who am I?</p>
         </div>
@@ -274,14 +274,14 @@
         <div class="tech__stack-heading">
           <p>Stacks</p>
         </div>
-        <div class="text__stack-card">
+        <div class="text__stack-card wow fadeInUp">
           <i class="fa-brands fa-html5"></i>
           <i class="fa-brands fa-css3"></i>
           <i class="fa-brands fa-square-js"></i>
           <i class="fa-brands fa-php"></i>
 
         </div>
-        <div class="text__stack-card">
+        <div class="text__stack-card wow fadeInUp">
           <i class="fa-brands fa-laravel"></i>
           <i class="fa-brands fa-bootstrap"></i>
           <i class="fa-brands fa-git-alt"></i>
@@ -296,15 +296,15 @@
         </div>
         <div class="random__list">
           <ul>
-            <li>I don't like bugs (both insects and software bugs!)</li>
-            <li>I find myself being more productive at night, though I can still work during the day.</li>
-            <li>I destress myself by playing games (In Mobile Legends, my favorite hero is Claude) and watching movies
+            <li class="wow fadeInUp">I don't like bugs (both insects and software bugs!)</li>
+            <li class="wow fadeInUp">I find myself being more productive at night, though I can still work during the day.</li>
+            <li class="wow fadeInUp">I destress myself by playing games (In Mobile Legends, my favorite hero is Claude) and watching movies
               and
               TV series.</li>
-            <li>I like to watch animated sitcoms like The Simpsons and Family Guy, especially the running gags that are
+            <li class="wow fadeInUp">I like to watch animated sitcoms like The Simpsons and Family Guy, especially the running gags that are
               full of randomness.</li>
-            <li>I also enjoy watching documentary series.</li>
-            <li>I like to browse and spend my time in social media sites.</li>
+            <li class="wow fadeInUp">I also enjoy watching documentary series.</li>
+            <li class="wow fadeInUp">I like to browse and spend my time in social media sites.</li>
           </ul>
         </div>
       </section>
@@ -345,9 +345,9 @@
       <div class='hamburger__content'>
         <i class="fa-solid fa-x close-hamburger"></i>
         <ul class="hamburger__list">
-          <li><a href="#about"><i class="fa-regular fa-address-card"></i> About</a></li>
-          <li><a href="#project"><i class="fa-solid fa-list-check"></i> Projects</a></li>
-          <li><a href="#contact"><i class="fa-regular fa-address-book"></i> Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
