--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=
-    , initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hey it's Kevin</title>
   <script src="https://kit.fontawesome.com/eacd88b6a6.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/custom-css.css">
@@ -111,7 +110,7 @@
                 </ul>
               </div>
               <div class='project__footer'>
-                <a>
+                <a class="project__live-site">
                   <i class="fa-solid fa-gamepad"></i> Live Site
                 </a>
                 <a href="https://github.com/KevinChristopherMorco/advice-generator-app" target='__blank'>
@@ -145,7 +144,7 @@
                 </ul>
               </div>
               <div class='project__footer'>
-                <a>
+                <a class="project__live-site">
                   <i class="fa-solid fa-gamepad"></i> Live Site
                 </a>
                 <a href="https://github.com/KevinChristopherMorco/time-tracking-dashboard" target='__blank'>
@@ -352,6 +351,8 @@
       </div>
     </div>
   </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="assets/js/custom-js.js"></script>
   <script src="lib/wow/dist/wow.js"></script>
