updated mobile responsiveness

--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hey it's Kevin</title>
+  <link rel="icon" type="image/x-icon" href="pictures/logo/favicon.png">
+  <script src="https://kit.fontawesome.com/eacd88b6a6.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/custom-css.css">
   <link rel="stylesheet" href="lib/wow/css/libs/animate.css">
 </head>
@@ -13,7 +15,7 @@
   <header class="wow fadeIn" data-wow-delay="1s">
     <nav class="nav__main-container">
       <div class="nav__logo-container">
-        <p>Kevin</p>
+        <img src="pictures/logo/darktheme-logo.png" alt="">
       </div>
       <div class="nav__hamburger-container">
         <svg>
@@ -55,16 +57,16 @@
             <p>Personalize Theme</p>
             <p>Choose a theme that suits your preference.</p>
             <div class='hero__theme-container wow fadeInUp' data-wow-delay="1s">
-              <div class='hero__theme hero__theme--active' id="dark-theme"></div>
-              <div class='hero__theme' id="light-theme"></div>
-              <div class='hero__theme' id="brown-theme"></div>
-              <div class='hero__theme' id="blue-theme"></div>
+              <div class='hero__theme dark-theme hero__theme--active' id="dark-theme"></div>
+              <div class='hero__theme light-theme' id="light-theme"></div>
+              <div class='hero__theme brown-theme' id="brown-theme"></div>
+              <div class='hero__theme blue-theme' id="blue-theme"></div>
             </div>
           </div>
         </div>
       </section>
       <section class='about__container wow fadeInUp' id="about">
-        <div class='about__heading'>
+        <div class='about__heading heading'>
           <p>Who am I?</p>
         </div>
         <div class='about__content'>
@@ -83,7 +85,7 @@
         </div>
       </section>
       <section class='project__container' id="project">
-        <div class="project__heading">
+        <div class="project__heading heading">
           <p>Projects</p>
         </div>
         <div class='project__card-container'>
@@ -188,7 +190,7 @@
 
     <div class="next__content-container">
       <section class="about__container wow fadeInUp">
-        <div class='about__heading'>
+        <div class='about__heading heading'>
           <p>Who am I?</p>
         </div>
         <div class='about__content'>
@@ -204,7 +206,7 @@
       </section>
 
       <section class='project__container' id="skills">
-        <div class="project__heading">
+        <div class="project__heading heading">
           <p>Skills</p>
         </div>
         <div class='project__card-container'>
@@ -269,7 +271,7 @@
       </section>
 
       <section class='tech__stack-container' id="stacks">
-        <div class="tech__stack-heading">
+        <div class="tech__stack-heading heading">
           <p>Stacks</p>
         </div>
         <div class="text__stack-card wow fadeInUp">
@@ -288,7 +290,7 @@
       </section>
 
       <section class='random__stuffs-container' id="random">
-        <div class="random__heading">
+        <div class="random__heading heading">
           <p>Random facts about me😂
           </p>
         </div>
@@ -318,7 +320,7 @@
       <p>Drop me a line anytime. <span>Let's chat</span> and make something <span>awesome together!!</span></p>
     </div>
     <div class="closing__icon-container">
-      <p>Contacts:</p>
+      <p class="heading">Contacts:</p>
       <ul>
         <li><a href="https://github.com/KevinChristopherMorco" target="__blank"><i
               class="fa-brands fa-github"></i>GitHub</a></li>
@@ -350,7 +352,6 @@
       </div>
     </div>
   </div>
-  <script src="https://kit.fontawesome.com/eacd88b6a6.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="assets/js/custom-js.js"></script>
   <script src="lib/wow/dist/wow.js"></script>
