--- a/personal-portfolio.html
+++ b/personal-portfolio.html
@@ -89,7 +89,7 @@
           <p>Projects</p>
         </div>
         <div class='project__card-container'>
-          
+
         </div>
       </section>
     </div>
@@ -181,19 +181,36 @@
         <div class="tech__stack-heading heading">
           <p>Stacks</p>
         </div>
-        <div class="text__stack-card wow fadeInUp">
-          <i class="fa-brands fa-html5"></i>
-          <i class="fa-brands fa-css3"></i>
-          <i class="fa-brands fa-square-js"></i>
-          <i class="fa-brands fa-php"></i>
-
+        <div class="text__stack-card-container">
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-html5"></i>
+            <p>HTML</p>
+          </div>
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-css3"></i>
+            <p>CSS</p>
+          </div>
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-square-js"></i>
+            <p>JavaScript</p>
+          </div>
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-php"></i>
+            <p>PHP</p>
+          </div>
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-laravel"></i>
+            <p>Laravel</p>
+          </div>
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-bootstrap"></i>
+            <p>Bootstrap</p>
+          </div>
+          <div class="text__stack-card wow fadeInUp">
+            <i class="fa-brands fa-git-alt"></i>
+            <p>Bash</p>
+          </div>
         </div>
-        <div class="text__stack-card wow fadeInUp">
-          <i class="fa-brands fa-laravel"></i>
-          <i class="fa-brands fa-bootstrap"></i>
-          <i class="fa-brands fa-git-alt"></i>
-        </div>
-
       </section>
 
       <section class='random__stuffs-container' id="random">
@@ -204,11 +221,15 @@
         <div class="random__list">
           <ul>
             <li class="wow fadeInUp">I don't like bugs (both insects and software bugs!)</li>
-            <li class="wow fadeInUp">I find myself being more productive at night, though I can still work during the day.</li>
-            <li class="wow fadeInUp">I destress myself by playing games (In Mobile Legends, my favorite hero is Claude) and watching movies
+            <li class="wow fadeInUp">I find myself being more productive at night, though I can still work during the
+              day.
+            </li>
+            <li class="wow fadeInUp">I destress myself by playing games (In Mobile Legends, my favorite hero is Claude)
+              and watching movies
               and
               TV series.</li>
-            <li class="wow fadeInUp">I like to watch animated sitcoms like The Simpsons and Family Guy, especially the running gags that are
+            <li class="wow fadeInUp">I like to watch animated sitcoms like The Simpsons and Family Guy, especially the
+              running gags that are
               full of randomness.</li>
             <li class="wow fadeInUp">I also enjoy watching documentary series.</li>
             <li class="wow fadeInUp">I like to browse and spend my time in social media sites.</li>
